tests/tutorial/assets/vue/pages/errors/500/component.vue
<template>
    <div style="width: 100%;">
        <h1 style="textAlign: center;">500 Error</h1>
        <h2 style="textAlign: center;">Internal Server Error</h2>
    </div>
</template>

<script>
export default {
    name: 'Root',
    data() {
        return {

        }
    }
}
</script>

